--- a/eniato/base-templates/includes/header/navigation.html
+++ b/eniato/base-templates/includes/header/navigation.html
@@ -56,7 +56,7 @@
 
                 
                 <li class="nav__item">
-                    <a href="{% url 'accounts:home' %}" class="nav__link {% if app_name == '' %}active-link{% endif %}">
+                    <a href="{% url 'core:index' %}" class="nav__link {% if app_name == 'core' %}active-link{% endif %}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-three-dots nav__icon" viewBox="0 0 16 16">
                             <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
                         </svg>
